namespace java transformer
namespace netstd transformer

service MessageService
{
	string sendMessage(1:string message),
}